Fixed action bar for everything except timeline

--- a/app/src/main/res/layout/content_options.xml
+++ b/app/src/main/res/layout/content_options.xml
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take Me to Newsfeed"
+        android:text="Take Me to News feed"
         android:id="@+id/toNewsFeedOptions"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -34,7 +34,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take Me to Forum"
+        android:text="Take Me to Q and A"
         android:id="@+id/toForumOptions"
         android:layout_above="@+id/toNewsFeedOptions" />
 </RelativeLayout>
