--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.MainActivity">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -11,13 +12,13 @@
     <item
         android:id="@+id/action_Forum"
         android:orderInCategory="100"
-        android:title="@string/Forum"
+        android:title="@string/QandA"
         app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/action_NewsFeed"
         android:orderInCategory="100"
-        android:title="News"
+        android:title="News Feed"
         app:showAsAction="ifRoom|withText" />
 
 </menu>
