--- a/app/src/main/res/layout/activity_submit_answer.xml
+++ b/app/src/main/res/layout/activity_submit_answer.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dwangus.gai.bphc.ui.submitAnswer">
+    tools:context="com.dwangus.gai.bphc.ui.submitAnswer"
+    android:background="#ffffff">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
