--- a/app/src/main/res/layout/activity_submit_question.xml
+++ b/app/src/main/res/layout/activity_submit_question.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dwangus.gai.bphc.ui.submitQuestion">
+    tools:context="com.dwangus.gai.bphc.ui.submitQuestion"
+    android:background="#ffffff">
 
     <EditText
         android:layout_width="match_parent"
