--- a/app/src/main/res/layout/activity_tapped_question.xml
+++ b/app/src/main/res/layout/activity_tapped_question.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dwangus.gai.bphc.ui.tappedQuestion">
+    tools:context="com.dwangus.gai.bphc.ui.tappedQuestion"
+    android:background="#ffffff">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/questionLayout">
+        android:id="@+id/questionLayout"
+        android:background="#ffffff">
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +92,8 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentRight="false"
         android:layout_below="@+id/questionLayout"
-        android:layout_marginTop="-5dp" />
+        android:layout_marginTop="-5dp"
+        android:background="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
