--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    tools:background="#fffc970b">
+    tools:background="#fffc970b"
+    android:background="#ffffff">
 
     <View
         android:id="@+id/lineView"
