--- a/app/src/main/res/layout/content_options.xml
+++ b/app/src/main/res/layout/content_options.xml
@@ -17,11 +17,8 @@
         android:layout_height="wrap_content"
         android:text="Catch up on the latest updates from BAHEC or ask an anymous question and get reliable answers on the Q &amp; A forum"
         android:id="@+id/descriptionOptions"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/toForumOptions"
-        android:layout_marginBottom="150dp"
-        android:textSize="24sp"
+        android:textSize="32sp"
         android:gravity="center"
         android:background="#ffffff"
         android:textColor="#000000" />
@@ -30,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Take Me to the News feed"
+        android:textSize="22sp"
         android:id="@+id/toNewsFeedOptions"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -39,6 +37,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Take Me to the Q &amp; A"
+        android:textSize="22sp"
         android:id="@+id/toForumOptions"
-        android:layout_above="@+id/toNewsFeedOptions" />
+        android:layout_above="@+id/toNewsFeedOptions"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
