--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp"
+        android:fontFamily=""
         android:layout_marginTop="15dp" />
 
     <TextView
