--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -25,7 +25,13 @@
         android:text="New Question"
         android:id="@+id/newQ"
         android:layout_alignBottom="@+id/recyclerView"
-        android:layout_centerHorizontal="true"
-        android:layout_alignRight="@+id/recyclerView" />
+        android:layout_alignRight="@+id/recyclerView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/my_button_bg"
+        android:textColor="#ff8c00"
+        android:textColorHighlight="@color/colorPrimary"
+        android:textSize="22sp" />
+    />
 
 </RelativeLayout>
