--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,10 +27,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Get Started!"
+        android:textSize="22sp"
+        android:layout_marginBottom="53dp"
         android:id="@+id/welcomeButton"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#ff8c00"
+        android:background="#92ebff" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,4 +46,5 @@
         android:textColor="@color/whiteText"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp" />
+
 </RelativeLayout>
