--- a/app/src/main/res/layout/content_options.xml
+++ b/app/src/main/res/layout/content_options.xml
@@ -15,13 +15,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Catch up on the latest updates from BAHEC or ask an anymous question and get reliable answers on the Q &amp; A forum"
+        android:text="Catch up on the latest updates from BAHEC or ask an anonymous question and get reliable answers on the Q &amp; A forum from the peer health ambassadors!"
         android:id="@+id/descriptionOptions"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/toForumOptions"
-        android:layout_marginBottom="150dp"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:gravity="center"
         android:background="#ffffff"
         android:textColor="#000000" />
@@ -31,14 +28,26 @@
         android:layout_height="wrap_content"
         android:text="Take Me to the News feed"
         android:id="@+id/toNewsFeedOptions"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:textSize="22sp"
+        android:textColor="@color/orangeText"
+        android:background="#92ebff"
+        android:layout_marginTop="48dp"
+        android:layout_below="@+id/toForumOptions"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="false" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Take Me to the Q &amp; A"
+        android:textSize="22sp"
         android:id="@+id/toForumOptions"
-        android:layout_above="@+id/toNewsFeedOptions" />
+        android:textColor="@color/orangeText"
+        android:background="#92ebff"
+
+        android:layout_marginTop="55dp"
+        android:layout_below="@+id/descriptionOptions"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
